peac_dev/force-app/main/default/objects/Broker__c/Broker__c.object-meta.xml
<CustomObject>
    <label>Broker</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Broker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>