peac_dev/force-app/main/default/objects/Broker__c/fields/Broker_Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Dealer_Number__c</fullName>
    <formula>Account__r.Dealer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Dealer Number</label>
    <type>Text</type>
</CustomField>