peac_dev/force-app/main/default/objects/Broker__c/fields/Primary_Broker__c.field-meta.xml
<CustomField>
    <fullName>Primary_Broker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Broker</label>
    <type>Checkbox</type>
</CustomField>