peac_dev/force-app/main/default/objects/Broker__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>Brokers cannot be edited or added when related opportunity&apos;s stage is closed.</errorMessage>
</ValidationRule>